cropped date fixed

--- a/qencode5-portal/css/q6.css
+++ b/qencode5-portal/css/q6.css
@@ -1295,7 +1295,7 @@ dark-3.mCSB_scrollTools .mCSB_draggerRail {
 
     box-sizing: border-box;
     display: inline-block;
-    width: 260px;
+    width: 270px;
 
     position: relative;
 
@@ -1323,7 +1323,7 @@ dark-3.mCSB_scrollTools .mCSB_draggerRail {
     border: none;
     width: initial;
     font-size: 16px;
-    width: 95px;
+    width: 100px;
     text-align: center;
 
     font-weight: 600;
